# connect-extension-telegram-notifications

./: .flake8  .gitignore  .telegram_notify_dev.env.dist  CHANGELOG.md  Dockerfile  HOWTO.md  LICENSE  README.md  _config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
connect_telegram_ext/: constants.py  events.py  extension.json  messages.py  models.py  telegram.py  titles.py  webapp.py
connect_telegram_ext/static/: settings.html
connect_telegram_ext/static/css/: setting.08f7b3e9.css  setting.b417a94b.css
connect_telegram_ext/static/js/: chunk-vendors.674ee2a8.js  chunk-vendors.b9f3e588.js  chunk-vendors.b9f3e588.js.map  setting.113f74ed.js  setting.113f74ed.js.map  setting.c026aa51.js
connect_telegram_ext/static_root/: customer.html  index.html  page1.html  settings.html
connect_telegram_ext/static_root/css/: app.301d7c6a.css  app.3272f3ae.css  app.5c1a4cc1.css  app.9f92c7d4.css  app.bd3512aa.css  chunk-vendors.b10899a2.css  stylesheet.css
connect_telegram_ext/static_root/js/: app.0d880efc.js  app.0d880efc.js.map  app.12e0fced.js  app.12e0fced.js.map  app.3ed064b7.js  app.3ed064b7.js.map  app.6c4f4fae.js  app.6c4f4fae.js.map  app.b3ae55a0.js  app.b3ae55a0.js.map  chunk-vendors.674ee2a8.js.map  chunk-vendors.9417066f.js  chunk-vendors.9417066f.js.map  chunk-vendors.bccc6977.js  chunk-vendors.bccc6977.js.map  index-dev.js  index-prod.js  setting.c026aa51.js.map  telegram-settings.js
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html  settings.html
frontend/src/: App.vue  main.js
frontend/src/components/: SettingsItem.vue  (+1 more)
tests/: __init__.py  conftest.py  test_messages.py  test_telegram.py  test_telegram_notify.py  test_webapp.py
(+1 files in other folders)
