[tool.poetry]
name = "telegram-notify"
version = "0.1.0"
description = "A very simple Telegram notificator"
authors = ["Cloudblue Connect"]
license = "Apache Software License 2.0"
packages = [
    { include = "connect_telegram_ext" }
]
readme = "./README.md"

[tool.poetry.plugins."connect.eaas.ext"]
"eventsapp" = "connect_telegram_ext.events:TelegramNotifyApplication"
"webapp" = "connect_telegram_ext.webapp:TelegramNotifyWebApplication"

[tool.poetry.dependencies]
python = ">=3.8,<4"
python-telegram-bot = "^13.14"
responses = "^0.21.0"
connect-eaas-core = "26.*"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.15.1"
pytest-httpx = ">=0.20"
coverage = { extras = ["toml"], version = "^5.3" }
flake8 = "~3.8"
flake8-bugbear = "~20"
flake8-cognitive-complexity = "^0.1"
flake8-commas = "~2.0"
flake8-future-import = "~0.4"
flake8-import-order = "~0.18"
flake8-broken-line = "~0.3"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.0.0"
flake8-string-format = "^0.3.0"
connect-devops-testing-library = "24.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=connect_telegram_ext --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml"

[tool.coverage.run]
relative_files = true
branch = true

[tool.coverage.report]
omit = [
    "connect_telegram_ext/messages.py"
]

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
